# archtest

./: .gitignore  Cargo.toml
axum_rpc_like/rs_client/: .env  Cargo.toml
axum_rpc_like/rs_client/src/: client.rs  main.rs
axum_rpc_like/server/: Cargo.toml
axum_rpc_like/server/src/: state.rs
axum_rpc_like/server/src/api/: mod.rs
axum_rpc_like/ts_client/src/: main.ts  response.ts  types.ts
client/: Cargo.toml
client/src/: client.rs  main.rs
lib/derive/: Cargo.toml
lib/derive/src/: lib.rs
lib/types/: Cargo.toml
lib/types/src/: entity.rs  lib.rs
lib/types/src/api/: mod.rs  requests.rs
rs_client/: Cargo.toml
rs_client/src/: client.rs  main.rs
server/: .env  Cargo.toml
server/src/: main.rs
server/src/api/: get_version.rs  mod.rs
ts_client/: package.json
ts_client/src/: lib.ts  main.ts  response.ts  responses.ts  types.ts
yerpc/rs_client/: Cargo.toml
yerpc/server/: Cargo.toml
yerpc/server/src/: main.rs
yerpc/server/src/api/: mod.rs
yerpc/ts_client/: package.json
yerpc/ts_client/src/: types.ts
