[workspace]
members = ["rs_client", "server", "lib/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
types = { path = "lib/types" }
tokio = { version = "1.28", features = ["full"] }
axum = { version = "0.6", features = ["json", "ws", "headers"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
yerpc = { version = "0.5", features = ["support-axum", "support-tungstenite"] }
typescript-type-def = { version = "0.5.3", features = ["json_value"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
envy = "0.4"
mungos = "0.3.20"
bson = "2.6.1"
log = "0.4"
simple_logger = "4.1"
typeshare = "1.0.1"
resolver_api = "0.1.1"
async-trait = "0.1"