[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
dotenv.workspace = true
envy.workspace = true
mungos.workspace = true
log.workspace = true
simple_logger.workspace = true
async-trait.workspace = true