[package]
name = "yerpc_server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
axum.workspace = true
yerpc.workspace = true
typescript-type-def.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenv.workspace = true
envy.workspace = true
mungos.workspace = true
log.workspace = true
simple_logger.workspace = true